# 4SpecID

./: .gitignore  README.md
DataMining/: DownloadFromBold.sh  README.md  authors_from_GenBank_curl.sh  filter_by_BIN_and_add_GenBank_info.sh
Databases/Bovidae/: Bovidae_COI.tsv  README.md
Databases/Canidae/: Canidae.tsv  Canidae_BIN.tsv  Canidae_COI.tsv  README.md
Databases/Felidae/: Felidae.tsv  Felidae_BIN.tsv  Felidae_COI.tsv
Databases/dummyDataset/: DistMat.tsv  README.md  distMat_Duplication.xlsx  dummyDataset.tsv  dummyDataset_v2.tsv
Databases/dummyDataset/Results/: dummyDataset_v2_bins.tsv  dummyDataset_v2_species.tsv  dummyDataset_v2_stats.tsv
Installers/: README.md
ProjectMenus/: ActionButtons.md  Menus.md
src/: .gitignore  .gitmodules  4SpecID.pro  CMakeLists.txt  README.md  app.cpp  icons.qrc  main.cpp  run.sh
src/4SpecIDApp/: databaseconnector.cpp  databaseconnector.h  datasetanalysisdialog.cpp  datasetanalysisdialog.h  datasetanalysisdialog.ui  dbconnection.cpp  edge.cpp  edge.h  filterItem.h  filterOp.h  filterdialog.cpp  filterdialog.h  filterdialog.ui  filterscrollarea.cpp  filterscrollarea.h  gradingoptionsdialog.cpp  gradingoptionsdialog.h  gradingoptionsdialog.ui  graphscene.cpp  graphscene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  projectselection.cpp  projectselection.h  projectselectiondialog.h  projectselectiondialog.ui  qrecord.h  recordmodel.cpp  recordmodel.h  resultsmodel.cpp  resultsmodel.h
src/4SpecIDCore/: CMakeLists.txt  main.cpp
src/4SpecIDCore/algorithms/: CMakeLists.txt  algorithm.h
src/4SpecIDCore/algorithms/auditor/: CMakeLists.txt
src/4SpecIDCore/algorithms/auditor/include/auditor/: auditor.h
src/4SpecIDCore/algorithms/auditor/src/: auditor.cpp
src/4SpecIDCore/include/: auditor.h  csv.hpp  datatypes.h  engine_algorithm.h  fileio.h  iengine.h  ispecid.h  network.h  record.h  species.h  utils.h
src/4SpecIDCore/network/: CMakeLists.txt
src/4SpecIDCore/network/include/network/: network.h
src/4SpecIDCore/network/src/: network.cpp
src/4SpecIDCore/representations/: CMakeLists.txt
src/4SpecIDCore/representations/include/representations/: distance.h  gradingParameters.h  record.h  species.h  types.h
src/4SpecIDCore/src/: auditor.cpp  network.cpp
src/4SpecIDCore/utilities/: CMakeLists.txt  engine.h  fileio.h  utils.h
src/icons/: main_icon.icns
